--- a/rails_panel/panel.html
+++ b/rails_panel/panel.html
@@ -23,7 +23,7 @@
     <script src="assets/javascripts/init.js"></script>
 
   </head>
-  <body>
+  <body class="rails-panel">
     <div class="split-view" ng-controller='TransactionsCtrl'>
       <div class="split-view-contents split-view-contents-requests">
         <div class="data-grid data-grid-requests">
@@ -86,7 +86,7 @@
                 </li>
               </ul>
             </div>
-          </div> 
+          </div>
 
 
           <div class="tabbed-pane-content data-grid data-grid-details">
@@ -148,7 +148,7 @@
                 <thead>
                   <tr>
                     <th data-sort="string">Location</th>
-                    <th data-sort="string">Method</th>
+                    <th data-sort="string">Type</th>
                     <th class="fluid">SQL</th>
                     <th data-sort="float" class="duration">Duration</th>
                   </tr>
@@ -156,7 +156,7 @@
                 <tbody>
                   <tr ng-repeat="sql in activeSqls()" ng-show="showQuery(sql.payload.name)" class="{{sql.payload.name}}">
                     <td><a href="{{sql.payload.filename | editorify:sql.payload.line}}">{{sql.payload.filename | normalizePath}}:{{sql.payload.line}}</a>
-                    <td>{{sql.payload.method | viewMethod }}</td>
+                    <td>{{sql.payload.name}}</td>
                     <td>{{sql.payload.sql}}</td>
                     <td class="duration" data-sort-value="{{-sql.duration}}">{{sql.duration | number:0}} ms</td>
                   </tr>
